--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "@symfony/stimulus-bridge": "^3.2.2",
     "ansi-regex": "^2.1.1",
     "ansi-styles": "^2.2.1",
     "babel-code-frame": "^6.26.0",
@@ -51,7 +52,9 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@popperjs/core": "^2.11.8",
     "@symfony/webpack-encore": "^5.0.1",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.39.0",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.83.0",
