--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,14 +4,24 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
+            form_login:
+                login_path: app_login # Définit l'URL pour afficher le formulaire de connexion.
+                check_path: app_login # Définit l'URL où les données du formulaire sont envoyées pour vérification (par exemple, vérification de l'email et du mot de passe).
+                    # ma route "app_login" doit être définie dans un contrôleur
+            logout:
+               path: app_logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -23,7 +33,7 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/profil, roles: ROLE_USER }  #Les roles qui ont accès à profil ce sont les roles ROLE_USER
 
 when@test:
     security:
