--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "fakerphp/faker": "^1.24",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.0",
+        "rollerworks/password-strength-bundle": "^3.0",
+        "rollerworks/password-strength-validator": "^2.0",
         "symfony/asset": "7.2.*",
         "symfony/asset-mapper": "7.2.*",
         "symfony/console": "7.2.*",
