--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "tests"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@symfony/stimulus-bridge": "^3.2.2",
     "ansi-regex": "^2.1.1",
     "ansi-styles": "^2.2.1",
